--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,7 +91,7 @@
 
             <ImageView
                 android:id="@+id/iv_table"
-                android:layout_width="410dp"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_gravity="bottom"
                 android:layout_weight="1.5"
