--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,13 +18,13 @@
         android:padding="10dp">
 
         <TextView
-            android:fontFamily="@font/lobster"
             android:id="@+id/tv_false"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity=""
             android:layout_marginEnd="10dp"
             android:background="@drawable/bg_rounded_tv_false"
+            android:fontFamily="@font/lobster"
             android:padding="10dp"
             android:text="F a l s e : 0"
             android:textColor="@color/white"
@@ -36,11 +36,11 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:fontFamily="@font/lobster"
             android:id="@+id/tv_true"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_rounded_tv_true"
+            android:fontFamily="@font/lobster"
             android:padding="10dp"
             android:text="@string/true_0"
             android:textColor="@color/white"
@@ -53,13 +53,6 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-
-
-
-
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -68,8 +61,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="bottom">
+            android:gravity="bottom"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -108,17 +101,17 @@
             android:id="@+id/fl_first"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:layout_constraintEnd_toStartOf="@id/fl_second"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/fl_second"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:layout_marginBottom="42dp"
                 android:id="@+id/iv_ball1"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
+                android:layout_marginBottom="42dp"
                 android:adjustViewBounds="true"
                 android:paddingHorizontal="30dp"
                 android:paddingTop="50dp"
@@ -127,12 +120,13 @@
                 android:src="@drawable/ball" />
 
             <ImageView
-                android:layout_marginBottom="46dp"
                 android:id="@+id/iv_cup1"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_gravity="center"
-                android:src="@drawable/cup" />
+                android:layout_marginBottom="37dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/cup2" />
 
         </FrameLayout>
 
@@ -141,17 +135,17 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@id/fl_third"
-            app:layout_constraintStart_toEndOf="@id/fl_first">
+            app:layout_constraintStart_toEndOf="@id/fl_first"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:layout_marginBottom="42dp"
-
                 android:id="@+id/iv_ball_2"
+
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
+                android:layout_marginBottom="42dp"
                 android:adjustViewBounds="true"
                 android:paddingHorizontal="30dp"
                 android:paddingTop="50dp"
@@ -160,12 +154,13 @@
                 android:src="@drawable/ball" />
 
             <ImageView
-                android:layout_marginBottom="46dp"
                 android:id="@+id/iv_cup2"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_gravity="center"
-                android:src="@drawable/cup"/>
+                android:layout_marginBottom="37dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/cup2" />
 
         </FrameLayout>
 
@@ -173,17 +168,17 @@
             android:id="@+id/fl_third"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:layout_constraintStart_toEndOf="@id/fl_second"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/fl_second"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:layout_marginBottom="42dp"
                 android:id="@+id/iv_ball_3"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
+                android:layout_marginBottom="42dp"
                 android:adjustViewBounds="true"
                 android:paddingHorizontal="30dp"
                 android:paddingTop="50dp"
@@ -192,71 +187,69 @@
                 android:src="@drawable/ball" />
 
             <ImageView
-                android:layout_marginBottom="46dp"
                 android:id="@+id/iv_cup3"
-                android:layout_width="86dp"
+                android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_gravity="center"
-                android:src="@drawable/cup" />
+                android:layout_marginBottom="37dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/cup2" />
 
         </FrameLayout>
 
         <com.airbnb.lottie.LottieAnimationView
-            android:layout_marginTop="20dp"
             android:id="@+id/la_down_cup1"
             android:layout_width="90dp"
             android:layout_height="100dp"
+            android:layout_marginTop="20dp"
             android:scaleType="centerCrop"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"
-            app:lottie_fileName="down1.json"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@id/la_down_cup2"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="down1.json"
+            app:lottie_loop="true" />
 
         <com.airbnb.lottie.LottieAnimationView
-            android:layout_marginTop="20dp"
             android:id="@+id/la_down_cup2"
             android:layout_width="90dp"
             android:layout_height="100dp"
+            android:layout_marginTop="20dp"
             android:scaleType="centerCrop"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"
-            app:lottie_fileName="down1.json"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@id/la_down_cup3"
-            app:layout_constraintStart_toEndOf="@id/la_down_cup1"/>
+            app:layout_constraintStart_toEndOf="@id/la_down_cup1"
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="down1.json"
+            app:lottie_loop="true" />
 
         <com.airbnb.lottie.LottieAnimationView
-            android:layout_marginTop="20dp"
             android:id="@+id/la_down_cup3"
             android:layout_width="90dp"
             android:layout_height="100dp"
+            android:layout_marginTop="20dp"
             android:scaleType="centerCrop"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"
-            app:lottie_fileName="down1.json"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/la_down_cup2"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="down1.json"
+            app:lottie_loop="true" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/la_down"
             android:layout_width="90dp"
             android:layout_height="100dp"
-            android:scaleType="centerCrop"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"
             android:layout_marginEnd="40dp"
-            app:lottie_fileName="down1.json"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="down1.json"
+            app:lottie_loop="true" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -269,13 +262,13 @@
         android:padding="10dp">
 
         <TextView
-            android:fontFamily="@font/lobster"
             android:id="@+id/tv_exit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity=""
             android:layout_marginEnd="10dp"
             android:background="@drawable/bg_rounded_tv"
+            android:fontFamily="@font/lobster"
             android:padding="10dp"
             android:text="E x i t"
             android:textColor="@color/white"
@@ -287,11 +280,11 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:fontFamily="@font/lobster"
             android:id="@+id/tv_play"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_rounded_tv_true"
+            android:fontFamily="@font/lobster"
             android:padding="10dp"
             android:text="P l a y"
             android:textColor="@color/white"
