--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="main_color">#FF9800</color>
+    <color name="main_color2">#7DE800</color>
 
 </resources>
