--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,7 @@
                 android:gravity="center_horizontal">
 
                 <TextView
+                    android:fontFamily="@font/lobster"
                     android:id="@+id/tv_result"
                     android:layout_width="200dp"
                     android:layout_height="?actionBarSize"
